<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/parent"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/white"
    android:padding="10dp"
    android:orientation="vertical"
    tools:context=".login_signup">


    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="5dp"
            android:orientation="vertical">


            <LinearLayout
                android:layout_width="250dp"
                android:layout_height="250dp"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="150dp"
                android:background="@drawable/bicycle"
                android:elevation="8dp"
                android:orientation="vertical" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="10dp"
                android:fontFamily="@font/audiowide"
                android:text="@string/Cycle"
                android:textAlignment="center"
                android:textColor="@android:color/black"
                android:textSize="30sp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="0dp"
                android:fontFamily="@font/almendra"
                android:text="@string/Cycle_slogan"
                android:textAlignment="center"
                android:textColor="@android:color/black"
                android:textSize="20sp" />

            <LinearLayout
                android:layout_width="350dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="50dp"
                android:layout_marginBottom="20dp">

                <Button
                    android:id="@+id/startpage_login"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginRight="10dp"
                    android:layout_weight="1"
                    android:background="@drawable/buttonslayout"
                    android:fontFamily="sans-serif"
                    android:onClick="callLoginScreen"
                    android:text="@string/Login"
                    android:textColor="@android:color/black"
                    android:textSize="17sp"
                    android:transitionName="transition_login" />

                <Button
                    android:id="@+id/startpage_signup"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="10dp"
                    android:layout_weight="1"
                    android:background="@drawable/buttonslayout"
                    android:fontFamily="sans-serif"
                    android:onClick="callSignUpScreen"
                    android:text="@string/Signup"
                    android:textColor="@android:color/black"
                    android:textSize="17sp"
                    android:transitionName="trans_signup" />
            </LinearLayout>

        </LinearLayout>
    </ScrollView>

</LinearLayout>